mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </nav>
     </header>
     <main class="main-section">
+      <div class="greeting">
+        Bienvenido a mi página web
+      </div>
       <section class="section-1">
         <div>
           <h3>Acerca de mi</h3>
